piccolo fix in productView per la visibilità dei vari bottoni solo se in sessione vi è il boolean a true isAdmin

--- a/src/main/webapp/css/ProductView.css
+++ b/src/main/webapp/css/ProductView.css
@@ -12,6 +12,7 @@ body{
     justify-content: space-between;
     margin-bottom:0;
     padding: 0;
+    margin-top: 10px;
 }
 
 .sorting-dropdown{
@@ -30,7 +31,7 @@ body{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
-    margin-top:5%;
+    margin-top:2%;
     padding: 20px;
     justify-content: space-around;
     align-items: center; /* Centra verticalmente i contenuti */
@@ -89,6 +90,7 @@ body{
 .button-container a:hover {
     background-color: #45a049;
 }
+
 .no-product-wrapper {
     display: flex;
     justify-content: center;
